# opengl-tutorial

./: CMakeLists.txt  README.md  application.cc  index_buffer.cc  index_buffer.h  renderer.cc  renderer.h  vertex_buffer.cc  vertex_buffer.h
.github/workflows/: build.yml
res/shader/: basic.shader
